--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -1347,7 +1347,16 @@ form.inline-form {
   width: 100%;
 }
 
-
+.h1ds-meta-item {
+    display: block;
+    padding: 0.2em;
+}
+.h1ds-meta-key {
+    display: block;
+    background: #ddd;
+}
+.h1ds-meta-value {
+}
 /* ============================================================
    from http://jqueryui.com/demos/sortable/#portlets 
    ============================================================ */
