--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -13,7 +13,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
   <script src="{{ STATIC_URL }}js/libs/modernizr-2.0.6.min.js"></script>
-    <!--[if IE]><script language="javascript" type="text/javascript" src="{{ STATIC_URL }}js/flot/excanvas.pack.js"></script><![endif]-->
     {% block extrahead %}{% endblock %}
 </head>
 
@@ -58,10 +57,9 @@
 
   <!-- JavaScript at the bottom for fast page loading -->
 
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery-1.7.min.js"><\/script>')</script>
-
+  <!-- Grab Google CDN's jQuery, with a protocol relative URL-->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
 
     {% if is_debug == "True" %}
     <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
