defer js loading. oops

--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -67,7 +67,7 @@
   <script type="text/javascript"> 
     function downloadJSAtOnload() {
     var element1 = document.createElement("script");
-    element1.src = "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js";
+    element1.src = "{{ STATIC_URL }}js/h1ds.min.js";
     document.body.appendChild(element1);
     }
     
