--- a/h1ds_core/templates/h1ds_core/base_node.html
+++ b/h1ds_core/templates/h1ds_core/base_node.html
@@ -52,7 +52,7 @@ HTML tables. -->
       <div id="h1ds-shot-controller">
 	<div class="sidebarcontent">
 	  <FORM id="h1ds-go-to-shot" class="inline-form" action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
-	    <INPUT type="hidden" name="reqpath" value="{{request_fullpath|safe}}">
+	    <INPUT type="hidden" name="reqpath" value="{{request.get_full_path|safe}}">
 	    <INPUT type="text" id="requested-shot" name="go_to_shot" placeholder="shot #" size="8">
 	  </FORM>
 	</div> <!-- end sidebarcontent -->
