--- a/h1ds_core/templates/h1ds_core/shot_list.html
+++ b/h1ds_core/templates/h1ds_core/shot_list.html
@@ -1,9 +1,23 @@
 {% extends "h1ds_core/base.html" %}
+{% block controlbar %}
+<ul>
+<li class="first{% if not previous %} inactive{% endif%}">{% if previous %}<a href="{{previous}}">previous</a>{% else %}previous{% endif %}
+<li class="{% if not next %}inactive{% endif%}">{% if next %}<a href="{{next}}">next</a>{% else %}next{% endif %}
+<li>
+  <form id="h1ds-go-to-shot" class="inline-form" action="{% url "h1ds-request-shot" %}" method="post">{% csrf_token %}
+    <input type="hidden" name="reqpath" value="{{request.get_full_path|safe}}">
+    <input type="text" id="requested-shot" name="go_to_shot" placeholder="shot #" size="8">
+  </form>
+</li>
+
+<!--<li class="inactive">page x of x -->
+</ul>
+{% endblock controlbar%}
 {% block content %}
 <div class="shot-list">
 <ul>
-{% for shot in shots %}
-<li class="center"><h2><a href="{{shot.get_absolute_url}}">{{shot.path}}</a></h2>
+{% for shot in results %}
+<li><a href="{{shot.url}}">{{shot.path}}</a>
 {% endfor %}
 </ul>
 </div>
