dataviewer.js and h1dsuri.js  extracted from script.js

--- a/h1ds_core/templates/h1ds_core/base.html
+++ b/h1ds_core/templates/h1ds_core/base.html
@@ -66,6 +66,8 @@
 
     {% if debug %}
     <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
+    <script defer src="{{ STATIC_URL }}js/libs/jsDataViewer/dataviewer.js"></script>
+    <script defer src="{{ STATIC_URL }}js/mylibs/h1dsuri.js"></script>
     <script defer src="{{ STATIC_URL }}js/script.js"></script>
     {% else %} 
   <script type="text/javascript"> 
