--- a/h1ds_core/templates/h1ds_core/node_with_data.html
+++ b/h1ds_core/templates/h1ds_core/node_with_data.html
@@ -1,4 +1,6 @@
 {% extends "h1ds_core/base_node.html" %}
 {% block node_data %}
-<div id="data-plot" class="h1ds-pagelet" data-dtype="{{node.data.value_dtype}}" data-ndim="{{node.data.get_n_dimensions}}">{% if node.data.get_n_dimensions == 0 %}{{node.data.value}}{% endif %}</div>
+{% if node.data.get_n_dimensions == 0 %}<div class="data">{{node.data.value}}</div>{% else %}
+<div class="data worksheet" data-dtype="{{node.data.value_dtype}}" data-ndim="{{node.data.get_n_dimensions}}"></div>
+{% endif %}
 {% endblock node_data %}
