fix links to non-html formats

--- a/h1ds_core/templates/h1ds_core/base_node.html
+++ b/h1ds_core/templates/h1ds_core/base_node.html
@@ -183,7 +183,7 @@ HTML tables. -->
   <div class="portlet" id="h1ds-portlet-formats">
     <div class="portlet-header">alternative formats</div>
     <div class="portlet-content">
-      {% for format in alt_formats %}{% show_format format %} {% endfor %}
+      {% for fmt, val in node.alternative_format_urls.items %} <a href="{{val}}">{{fmt}}</a>{% endfor %}
     </div> <!-- end portlet-content -->
   </div> <!-- end portlet -->
 
