--- a/h1ds/h1ds/templates/h1ds/base_node.html
+++ b/h1ds/h1ds/templates/h1ds/base_node.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_core/base.html" %}
+{% extends "h1ds/base.html" %}
 
 <!-- This loads the 'display_data' and 'show_filter' template tags, used
 for displaying data and H1DS data filters in the template. -->
