--- a/h1ds/h1ds/templates/h1ds/cannot_find_tree.html
+++ b/h1ds/h1ds/templates/h1ds/cannot_find_tree.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_core/base_node.html" %}
+{% extends "h1ds/base_node.html" %}
 
 {% block node_data %}
 <p>Cannot find tree <strong>{{input_tree}}</strong>.</p>
