--- a/h1ds/h1ds/templates/h1ds/node_1d.html
+++ b/h1ds/h1ds/templates/h1ds/node_1d.html
@@ -1,2 +1,2 @@
-{% extends "h1ds_core/base_node.html" %}
+{% extends "h1ds/base_node.html" %}
 {% block node_data %}<div id="testing-id" class="h1ds-pagelet" data-dtype="float" data-ndim="1"></div>{% endblock node_data %}
