--- a/h1ds/h1ds/templates/h1ds/node_scalar.html
+++ b/h1ds/h1ds/templates/h1ds/node_scalar.html
@@ -1,2 +1,2 @@
-{% extends "h1ds_core/base_node.html" %}
+{% extends "h1ds/base_node.html" %}
 {% block node_data %}{{node.get_data}}{% endblock node_data %}
