--- a/h1ds/h1ds/templates/h1ds/node_without_data.html
+++ b/h1ds/h1ds/templates/h1ds/node_without_data.html
@@ -1,2 +1,2 @@
-{% extends "h1ds_core/base_node.html" %}
+{% extends "h1ds/base_node.html" %}
 {% block node_data %}<p>This node has no data</p>{% endblock node_data %}
