--- a/h1ds/h1ds/templates/h1ds/shot_list.html
+++ b/h1ds/h1ds/templates/h1ds/shot_list.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_core/base.html" %}
+{% extends "h1ds/base.html" %}
 {% block controlbar %}
 <ul>
 <li class="first{% if not previous %} inactive{% endif%}">{% if previous %}<a href="{{previous}}">previous</a>{% else %}previous{% endif %}
