--- a/h1ds/h1ds/templates/h1ds/userprofile.html
+++ b/h1ds/h1ds/templates/h1ds/userprofile.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_core/base.html" %}
+{% extends "h1ds/base.html" %}
 
 {% block full_content %}
 <div id="full-content" class="clearfix">
