--- a/h1ds/h1ds/templates/h1ds/usersignal_form.html
+++ b/h1ds/h1ds/templates/h1ds/usersignal_form.html
@@ -1,4 +1,4 @@
-{% extends "h1ds_core/base_node.html" %}
+{% extends "h1ds/base_node.html" %}
 {% block node_data %}
 <form action="{% url "h1ds-update-user-signal" object.pk %}" method="post">{% csrf_token %}
 {{ form.as_p }}
