--- a/h1ds/h1ds/templates/h1ds/base.html
+++ b/h1ds/h1ds/templates/h1ds/base.html
@@ -66,6 +66,7 @@
 
     {% if debug %}
     <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
+    <script defer src="{{ STATIC_URL }}js/libs/masonry.pkgd.min.js"></script>
     <script defer src="{{ STATIC_URL }}js/libs/jsDataViewer/dataviewer.js"></script>
     <script defer src="{{ STATIC_URL }}js/mylibs/h1dsuri.js"></script>
     <script defer src="{{ STATIC_URL }}js/script.js"></script>
