update d3.js and move out of plugins.js

--- a/h1ds/h1ds/templates/h1ds/base.html
+++ b/h1ds/h1ds/templates/h1ds/base.html
@@ -65,8 +65,9 @@
     <script defer src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
     {% if debug %}
-    <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
+    <script defer src="{{ STATIC_URL }}js/libs/d3.v3.js"></script>
     <script defer src="{{ STATIC_URL }}js/libs/masonry.pkgd.js"></script>
+    <script defer src="{{ STATIC_URL }}js/plugins.js"></script>
     <script defer src="{{ STATIC_URL }}js/libs/jsDataViewer/dataviewer.js"></script>
     <script defer src="{{ STATIC_URL }}js/mylibs/h1dsuri.js"></script>
     <script defer src="{{ STATIC_URL }}js/script.js"></script>
