--- a/h1ds/h1ds/templates/h1ds/device_list.html
+++ b/h1ds/h1ds/templates/h1ds/device_list.html
@@ -1,6 +1,7 @@
 {% extends "h1ds/base.html" %}
 {% block content %}
 
+<h1>Experimental datasets</h1>
 <ul class="device-list">
 {% for device in results %}
  <li><a href="{% url 'device-detail' device=device.slug %}">{{device.name}}</a>
