--- a/h1ds/h1ds/templates/h1ds/device_detail.html
+++ b/h1ds/h1ds/templates/h1ds/device_detail.html
@@ -4,8 +4,11 @@
 <h1>{{name}}</h1>
 <p>{{description}}</p>
 
-
+{% if latest_shot %}
 <p>Latest shot: <a href="{% url 'shot-detail' device=slug shot=latest_shot.number %}">{{ latest_shot.number }}</a></p>
 <p><a href="{% url 'shot-detail' device=slug shot='latest' %}">track latest shot</a></p>
+{% else %}
+<p>latest shot not set for {{name}}.</p>
+{% endif %}
 <p>[run days]</p>
 {% endblock content %}
