drop django-mptt
django-mptt currently cannot deal with concurrent database writing,
so we go back to a simple sql tree model so out databases don't get
corrupted if we use multiple threads to scan database trees.

--- a/h1ds/h1ds/templates/h1ds/base_node.html
+++ b/h1ds/h1ds/templates/h1ds/base_node.html
@@ -93,7 +93,7 @@ HTML tables. -->
 	  <ul>
 	    <li><span class="current"><a href="{% if track_latest_shot %}{{ a.get_absolute_url_for_latest_shot }}{% else %}{{node.get_absolute_url}}{% endif %}">{{node.path|lower}}</a></span>
 	      <ul>
-		{% for c in node.get_children|dictsort:"path" %}
+		{% for c in node.children.all|dictsort:"path" %}
 		<li><a href="{% if track_latest_shot%}{{ c.get_absolute_url_for_latest_shot }}{% else %}{{c.get_absolute_url}}{% endif %}">{{c.path|lower}}</a>
 		  {% endfor %}
 	      </ul>
