update add to summarydb template section for new h1ds node model

--- a/h1ds/h1ds/templates/h1ds/base_node.html
+++ b/h1ds/h1ds/templates/h1ds/base_node.html
@@ -116,26 +116,27 @@ HTML tables.
         <!-- end portlet -->
 
 
-        <!-- If there is a summary data (SQL) dtype associated with the filtered
-             data then display a form for adding the data to the summary database -->
-        {% if perms.h1ds_summary.add_summaryattribute %}
-            {% if node.get_summary_dtype %}
-                <div class="portlet" id="h1ds-portlet-summarydb">
-                    <div class="portlet-header">add to summary db</div>
-                    <div class="portlet-content">
-                        <FORM action="{% url 'get-summary-attribute-form-from-url' %}"
-                              method="post">{% csrf_token %}
-                            <span class="left">add</span>
-                                <span class="right">
-                                    <INPUT type="hidden" id="url" name="url" value="{% get_absolute_uri %}">
-                                    <INPUT title="add attribute" type="submit" value="&#x21b5;"></span>
-                        </FORM>
-                    </div>
-                    <!-- end portlet-content -->
-                </div> <!-- end portlet -->
-            {% endif %}
+    {% comment %}
+    If there is a summary data (SQL) dtype associated with the filtered
+    data then display a form for adding the data to the summary database
+    {% endcomment %}
+    {% if perms.h1ds_summary.add_summaryattribute %}
+        {% if node.data.get_n_dimensions == 0 %}
+            <div class="portlet" id="h1ds-portlet-summarydb">
+                <div class="portlet-header">add to summary db</div>
+                <div class="portlet-content">
+                    <FORM action="{% url 'get-summary-attribute-form-from-url' %}"
+                          method="post">{% csrf_token %}
+                        <span class="left">add</span>
+                        <span class="right">
+                            <INPUT type="hidden" id="url" name="url" value="{% get_absolute_uri %}">
+                            <INPUT title="add attribute" type="submit" value="&#x21b5;"></span>
+                    </FORM>
+                </div>
+                <!-- end portlet-content -->
+            </div> <!-- end portlet -->
         {% endif %}
-
+    {% endif %}
         <!--  If the  data has  been filtered,  display the  applied  filters in
           order, with option to adjust or remove each filter -->
         {% if node.filter_history %}
